update functions in view #2(Rewrite)

--- a/myapp/templates/reviews.html
+++ b/myapp/templates/reviews.html
@@ -49,9 +49,9 @@ h1 { font-size: 1.5em; margin: 10px; }
 	<body>
 		<a href="/index/">Home</a>   <a href="/cate/">Categories</a>
 	<hr></br>
-		{{shop_name}}
-		{{shop.cate}}
-		{{shop.note}}
+		<h1>{{shop.name}}</h1>
+		<h4>{{shop.cate}}</h4>
+		<h4>{{shop.note}}</h4>
 	</br><hr></br>
 	
 	<form method='POST' action=''>
