--- a/myapp/templates/reviews.html
+++ b/myapp/templates/reviews.html
@@ -47,12 +47,29 @@ h1 { font-size: 1.5em; margin: 10px; }
 </style>		
 	</head>
 	<body>
-		<a href="/index/">Home</a>   <a href="/cate/">Categories</a>
+	<form method='GET' action=''>
+		<div>
+			<input type="search" id="mySearch" name="q">
+			<button>Search</button>
+		</div>
+	</form>
+		<a href="/index/">Home</a>   <a href="/cate/">Categories</a>    <a href="">Good Food Guide</a>
 	<hr></br>
 		<h1>{{shop.name}}</h1>
 		<h4>{{shop.cate}}</h4>
 		<h4>{{shop.note}}</h4>
 	</br><hr></br>
+	
+	<h2>Last reviews</h2></br>
+	{% for element in last_review %}
+	name: {{element.writer_name}}
+	</br>
+	{{element.body}}
+	</br>
+	rating: {{element.rating}} date: {{element.review_date}}
+	</br>
+	</hr>
+	{% endfor %}
 	
 	<form method='POST' action=''>
 	{% csrf_token %}
@@ -60,15 +77,15 @@ h1 { font-size: 1.5em; margin: 10px; }
 	</br>
 <fieldset class="rating">
     <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="5 stars"></label>
-    <input type="radio" id="star4half" name="rating" value="4 and a half" /><label class="half" for="star4half" title="4.5 stars"></label>
+    <input type="radio" id="star4half" name="rating" value="4.5" /><label class="half" for="star4half" title="4.5 stars"></label>
     <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="4 stars"></label>
-    <input type="radio" id="star3half" name="rating" value="3 and a half" /><label class="half" for="star3half" title="3.5 stars"></label>
+    <input type="radio" id="star3half" name="rating" value="3.5" /><label class="half" for="star3half" title="3.5 stars"></label>
     <input type="radio" id="star3" name="rating" value="3" /><label class = "full" for="star3" title="3 stars"></label>
-    <input type="radio" id="star2half" name="rating" value="2 and a half" /><label class="half" for="star2half" title="2.5 stars"></label>
+    <input type="radio" id="star2half" name="rating" value="2.5" /><label class="half" for="star2half" title="2.5 stars"></label>
     <input type="radio" id="star2" name="rating" value="2" /><label class = "full" for="star2" title="2 stars"></label>
-    <input type="radio" id="star1half" name="rating" value="1 and a half" /><label class="half" for="star1half" title="1.5 stars"></label>
+    <input type="radio" id="star1half" name="rating" value="1.5" /><label class="half" for="star1half" title="1.5 stars"></label>
     <input type="radio" id="star1" name="rating" value="1" /><label class = "full" for="star1" title="1 star"></label>
-    <input type="radio" id="starhalf" name="rating" value="half" /><label class="half" for="starhalf" title="0.5 stars"></label>
+    <input type="radio" id="starhalf" name="rating" value="0.5" /><label class="half" for="starhalf" title="0.5 stars"></label>
 </fieldset>
 
 </br></br>
