--- a/myapp/templates/search.html
+++ b/myapp/templates/search.html
@@ -4,7 +4,7 @@
 		<button>Search</button>
 	</div>
 </form>
-	<a href="/index/">Home</a>   <a href="/cate/">Categories</a>    <a href="">Good Food Guide</a>
+	<a href="/index/">Home</a>   <a href="/categories/">Categories</a>    <a href="">Good Food Guide</a>
 	<hr></br>
 	
 <form method='GET' action=''>
