--- a/myapp/templates/cate.html
+++ b/myapp/templates/cate.html
@@ -1,1 +1,44 @@
-test categories
+<html>
+	<head>
+		<title>Categories</title>
+	</head>
+	
+	<body>
+		<form method='GET' action='/search/'>
+			<div>
+				<input type="search" id="mySearch" name="q">
+				<button>Search</button>
+			</div>
+		</form>
+		<a href="/index/">Home</a>   <a href="/categories/">Categories</a>    <a href="">Good Food Guide</a>
+	<hr></br>
+	
+	<form action="" method="GET">
+	
+    <select name="Shop" id="shop" onchange="form.submit()">
+		<option value="" 
+		{% if x == current_x %} selected="selected" {% end if %}>
+		---เลือกประเภทร้าน---
+		</option>
+		<option value="food" 
+		{% if x == current_x %} selected="selected" {% end if %}>
+		ร้านอาหาร
+		</option>
+		<option value="drink" >เครื่องดื่ม</option>
+		<option value="dessert" >ขนมหวาน</option>
+    </select>
+	
+    <select name="Food" id="food" onchange="form.submit()">
+		<option value="">--------</option>
+		<option value="food">อาหารตามสั่ง</option>
+		<option value="drink">ก๋วยเตี๋ยว</option>
+		<option value="dessert">ยำ และอาหารอีสาน</option>
+		<option value="dessert">อาหารจานเดียว</option>
+		<option value="dessert">ข้าวราดแกง</option>
+    </select>
+	
+	</form>
+		
+	</body>
+
+</html>
