Calculate avg of ratings

--- a/myapp/templates/cate.html
+++ b/myapp/templates/cate.html
@@ -70,7 +70,7 @@
 	{% for element in shops_list %}
 	
 		{{element.name}}
-		{{element.rating}}
+		{{element.rating_avg}}
 		<hr></br>
 	
 	{% endfor %}
