--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -5,7 +5,7 @@
 	</div>
 </form>
 
-<a href="/index/">Home</a>   <a href="/categories/">Categories</a>    <a href="">Good Food Guide</a>
+<a href="/index/">Home</a>   <a href="/categories/">Categories</a>    <a href="">Add new shop</a>
 
 <hr></br>
 
@@ -16,11 +16,9 @@
 	</br>
 	name: {{element.writer_name}}
 	</br>
-	rating: {{element.rating}} date: {{element.review_date}}
+	rating: {{element.rating_avg}} date: {{element.review_date}}
 	</br><hr>
 	{% endfor %}
-	
-<h1>Test</h1>
 
 </br><hr>
 <a href="">About me</a>   <a href="">Contact me</a>
